--- a/index.html
+++ b/index.html
@@ -31,12 +31,84 @@
           </a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">ХОЧУ СЮДА!</a>
+          <a href="#" class="navigation-link">Хочу сюда!</a>
         </li>
       </ul>
     </nav>
   </header>
-  <main class="main-index"></main>
+  <main class="main-index">
+    <div class="welcome-container">
+      <section class="welcome-section">
+        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+        <img class="welcome-section-logo" src="#" alt="Логотип приветствия"/>
+      </section>
+      <h2 class="welcome-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="welcome-description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+    </div>
+    <section class="advantages">
+      <h2 class="visually-hidden">Приемущества Седоны</h2>
+      <ul class="advantages-list">
+        <li class="advantages-item">
+          <h3 class="advantages-title">Настоящий городок</h3>
+          <span class="advantages-number">— №1 —</span>
+          <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        </li>
+        <li class="advantages-item">
+          <img class="advantages-image" src="#" alt="Мотель в Седоне"/>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Жилье</h3>
+          <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Еда</h3>
+          <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Сувениры</h3>
+          <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+        </li>
+        <li class="advantages-item">
+          <img class="advantages-image" src="#" alt="Мост Дьявола"/>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Там есть мост дьявола</h3>
+          <span class="advantages-number">— №2 —</span>
+          <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Небольшая площадь</h3>
+          <span class="advantages-number">— №3 —</span>
+          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Красивая дорога</h3>
+          <span class="advantages-number">— №4 —</span>
+          <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Мало туристов</h3>
+          <span class="advantages-number">— №5 —</span>
+          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+      </ul>
+    </section>
+    <section class="offer">
+      <h2 class="offer-title">Заинтересовались?</h2>
+      <p class="offer-description">Укажите предполагаемые даты поездки,
+        и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <a href="catalog.html" class="offer-link">Поиск гостиницы в Седоне</a>
+    </section>
+    <section class="subscribe">
+      <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+      <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+        <label for="email">e-mail</label>
+        <input type="email" id="email" name="email" placeholder="Ваш e-mail">
+        <button type="submit" class="button- button-subscribe">Подписаться</button>
+      </form>
+    </section>
+  </main>
   <footer class="page-footer"></footer>
   </body>
 </html>
