--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a href="#" class="navigation-link">Главная</a>
+          <a href="#" class="navigation-link navigation-link-current">Главная</a>
         </li>
         <li class="navigation-item">
           <a href="#" class="navigation-link">О Седоне</a>
@@ -37,61 +37,54 @@
     </nav>
   </header>
   <main class="main-index">
-    <div class="welcome-container">
-      <section class="welcome-section">
-        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-        <img class="welcome-section-logo" src="#" alt="Логотип приветствия"/>
-      </section>
-      <h2 class="welcome-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p class="welcome-description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-    </div>
+    <section class="welcome-section">
+      <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+      <img class="welcome-section-logo" src="#" alt="Прекрасная Седона &quot;ибо Гранд Каньен отстой&quot;"/>
+    </section>
+    <section class="description-section">
+      <strong class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
+      <p class="description-section-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+    </section>
     <section class="advantages">
       <h2 class="visually-hidden">Приемущества Седоны</h2>
-      <ul class="advantages-list">
+      <ol class="advantages-list">
         <li class="advantages-item">
           <h3 class="advantages-title">Настоящий городок</h3>
-          <span class="advantages-number">— №1 —</span>
           <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-        </li>
-        <li class="advantages-item">
           <img class="advantages-image" src="#" alt="Мотель в Седоне"/>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-title">Жилье</h3>
-          <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-title">Еда</h3>
-          <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-title">Сувениры</h3>
-          <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
-        </li>
-        <li class="advantages-item">
-          <img class="advantages-image" src="#" alt="Мост Дьявола"/>
+          <ul class="special-advantages">
+            <li class="advantages-list advantages-list-special">
+              <h3 class="advantages-title">Жилье</h3>
+              <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Еда</h3>
+              <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Сувениры</h3>
+              <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+            </li>
+          </ul>
         </li>
         <li class="advantages-item">
           <h3 class="advantages-title">Там есть мост дьявола</h3>
-          <span class="advantages-number">— №2 —</span>
           <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <img class="advantages-image" src="#" alt="Мост Дьявола"/>
         </li>
         <li class="advantages-item">
           <h3 class="advantages-title">Небольшая площадь</h3>
-          <span class="advantages-number">— №3 —</span>
           <p class="advantages-description">Все достопримечательности находятся очень близко</p>
         </li>
         <li class="advantages-item">
           <h3 class="advantages-title">Красивая дорога</h3>
-          <span class="advantages-number">— №4 —</span>
           <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
         <li class="advantages-item">
           <h3 class="advantages-title">Мало туристов</h3>
-          <span class="advantages-number">— №5 —</span>
           <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
-      </ul>
+      </ol>
     </section>
     <section class="offer">
       <h2 class="offer-title">Заинтересовались?</h2>
@@ -109,6 +102,31 @@
       </form>
     </section>
   </main>
-  <footer class="page-footer"></footer>
+  <footer class="page-footer">
+    <section class="footer-contacts">
+      <h2 class="visually-hidden">Социальные сети</h2>
+      <ul class="footer-contacts-list">
+        <li class="footer-contacts-item">
+          <a href="https://vk.com/htmlacademy" class="footer-contacts-link">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="footer-contacts-item">
+          <a href="https://t.me/htmlacademy" class="footer-contacts-link">
+            <span class="visually-hidden">Телеграм</span>
+          </a>
+        </li>
+        <li class="footer-contacts-item">
+          <a href="https://www.youtube.com/user/htmlacademyru" class="footer-contacts-link">
+            <span class="visually-hidden">YouTube</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <a href="tel:+78128121212" class="footer-phone-number">+7 (812) 812-12-12</a>
+    <a href="https://htmlacademy.ru/" class="footer-html-academy-link">
+      <img src="#" class="footer-html-academy-image" alt="HTML Academy">
+    </a>
+  </footer>
   </body>
 </html>
