добавит разметку области с сортировкой

--- a/catalog.html
+++ b/catalog.html
@@ -99,8 +99,25 @@
             <button type="reset" class="button button-reset-filters">Сбросить</button>
         </form>
       </section>
-
     </header>
+    <section class="catalog-sort">
+      <h2 class="visually-hidden">Сортировка</h2>
+      <strong class="search-results-title">Найдено гостиниц: 38</strong>
+      <select class="catalog-select" aria-label="Выбрать сортировку">
+        <option value="low-cost">Сначала дешёвые</option>
+        <option value="high-cost">Сначала дорогие</option>
+        <option value="popular">Сначала популярные</option>
+      </select>
+      <a href="#" class="view-table view-current">
+        <span class="visually-hidden">Показать карточки</span>
+      </a>
+      <a href="#" class="view-slides">
+        <span class="visually-hidden">Показать слайды</span>
+      </a>
+      <a href="#" class="view-list">
+        <span class="visually-hidden">Показать список</span>
+      </a>
+    </section>
   </main>
 
 
