--- a/catalog.html
+++ b/catalog.html
@@ -118,8 +118,77 @@
         <span class="visually-hidden">Показать список</span>
       </a>
     </section>
+    <section class="catalog-hotels">
+      <h2 class="visually-hidden">Каталог Гостиниц</h2>
+      <ul class="catalog-hotels-list">
+        <li class="catalog-hotels-item">
+          <a href="#" class="hotel-link">
+            <img src="#" class="hotel-image" alt="Гостиница Amara Resort & Spa">
+            <h3 class="hotel-title">Amara Resort & Spa</h3>
+          </a>
+          <span class="hotel-type">Гостиница</span>
+          <span class="hotel price">От 4000 ₽</span>
+          <a href="#" class="hotel-link hotel-link-details">подробнее</a>
+          <a href="#" class="hotel-link hotel-link-favorite">в избранное</a>
+          <div class="hotel-stars-rate">
+            <span class="rate-star">звезда</span>
+            <span class="rate-star">звезда</span>
+            <span class="rate-star">звезда</span>
+            <span class="rate-star">звезда</span>
+          </div>
+          <span class="hotel-rating">Рейтинг: 8,5</span>
+        </li>
+        <li class="catalog-hotels-item">
+          <a href="#" class="hotel-link">
+            <img src="#" class="hotel-image" alt="Гостиница Desert Quail Inn">
+            <h3 class="hotel-title">Villas at Poco Diablo</h3>
+          </a>
+          <span class="hotel-type">Гостиница</span>
+          <span class="hotel price">От 5000 ₽</span>
+          <a href="#" class="hotel-link hotel-link-details">подробнее</a>
+          <a href="#" class="hotel-link hotel-link-favorite">в избранное</a>
+          <div class="hotel-stars-rate">
+            <span class="rate-star">звезда</span>
+            <span class="rate-star">звезда</span>
+            <span class="rate-star">звезда</span>
+            <span class="rate-star">звезда</span>
+          </div>
+          <span class="hotel-rating">Рейтинг: 9,2</span>
+        </li>
+        <li class="catalog-hotels-item">
+          <a href="#" class="hotel-link">
+            <img src="#" class="hotel-image" alt="Гостиница Desert Quail Inn">
+            <h3 class="hotel-title">Desert Quail Inn</h3>
+          </a>
+          <span class="hotel-link hotel-type">Гостиница</span>
+          <span class="hotel-link hotel price">От 2500 ₽</span>
+          <a href="#" class="hotel-link-details">подробнее</a>
+          <a href="#" class="hotel-link-favorite">в избранное</a>
+          <div class="hotel-stars-rate">
+            <span class="rate-star">звезда</span>
+            <span class="rate-star">звезда</span>
+            <span class="rate-star">звезда</span>
+          </div>
+          <span class="hotel-rating">Рейтинг: 6,9</span>
+        </li>
+        <li class="catalog-hotels-item">
+          <a href="#" class="hotel-link">
+            <img src="#" class="hotel-image" alt="Гостиница GreenTree Inn">
+            <h3 class="hotel-title">GreenTree Inn</h3>
+          </a>
+          <span class="hotel-link hotel-type">Гостиница</span>
+          <span class="hotel-link hotel price">От 1500 ₽</span>
+          <a href="#" class="hotel-link-details">подробнее</a>
+          <a href="#" class="hotel-link-favorite">в избранное</a>
+          <div class="hotel-stars-rate">
+            <span class="rate-star">звезда</span>
+            <span class="rate-star">звезда</span>
+          </div>
+          <span class="hotel-rating">Рейтинг: 5,0</span>
+        </li>
+      </ul>
+    </section>
   </main>
-
 
   </body>
 </html>
