добавит разметку пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -121,13 +121,13 @@
     <section class="catalog-hotels">
       <h2 class="visually-hidden">Каталог Гостиниц</h2>
       <ul class="catalog-hotels-list">
-        <li class="catalog-hotels-item">
+        <li class="catalog-hotels-card">
           <a href="#" class="hotel-link">
             <img src="#" class="hotel-image" alt="Гостиница Amara Resort & Spa">
             <h3 class="hotel-title">Amara Resort & Spa</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
-          <span class="hotel price">От 4000 ₽</span>
+          <span class="hotel-price">От 4000 ₽</span>
           <a href="#" class="hotel-link hotel-link-details">подробнее</a>
           <a href="#" class="hotel-link hotel-link-favorite">в избранное</a>
           <div class="hotel-stars-rate">
@@ -138,13 +138,13 @@
           </div>
           <span class="hotel-rating">Рейтинг: 8,5</span>
         </li>
-        <li class="catalog-hotels-item">
+        <li class="catalog-hotels-card">
           <a href="#" class="hotel-link">
             <img src="#" class="hotel-image" alt="Гостиница Desert Quail Inn">
             <h3 class="hotel-title">Villas at Poco Diablo</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
-          <span class="hotel price">От 5000 ₽</span>
+          <span class="hotel-price">От 5000 ₽</span>
           <a href="#" class="hotel-link hotel-link-details">подробнее</a>
           <a href="#" class="hotel-link hotel-link-favorite">в избранное</a>
           <div class="hotel-stars-rate">
@@ -155,13 +155,13 @@
           </div>
           <span class="hotel-rating">Рейтинг: 9,2</span>
         </li>
-        <li class="catalog-hotels-item">
+        <li class="catalog-hotels-card">
           <a href="#" class="hotel-link">
             <img src="#" class="hotel-image" alt="Гостиница Desert Quail Inn">
             <h3 class="hotel-title">Desert Quail Inn</h3>
           </a>
-          <span class="hotel-link hotel-type">Гостиница</span>
-          <span class="hotel-link hotel price">От 2500 ₽</span>
+          <span class="hotel-type">Гостиница</span>
+          <span class="hotel-price">От 2500 ₽</span>
           <a href="#" class="hotel-link-details">подробнее</a>
           <a href="#" class="hotel-link-favorite">в избранное</a>
           <div class="hotel-stars-rate">
@@ -171,13 +171,13 @@
           </div>
           <span class="hotel-rating">Рейтинг: 6,9</span>
         </li>
-        <li class="catalog-hotels-item">
+        <li class="catalog-hotels-card">
           <a href="#" class="hotel-link">
             <img src="#" class="hotel-image" alt="Гостиница GreenTree Inn">
             <h3 class="hotel-title">GreenTree Inn</h3>
           </a>
-          <span class="hotel-link hotel-type">Гостиница</span>
-          <span class="hotel-link hotel price">От 1500 ₽</span>
+          <span class="hotel-type">Гостиница</span>
+          <span class="hotel-price">От 1500 ₽</span>
           <a href="#" class="hotel-link-details">подробнее</a>
           <a href="#" class="hotel-link-favorite">в избранное</a>
           <div class="hotel-stars-rate">
@@ -188,6 +188,29 @@
         </li>
       </ul>
     </section>
+    <div class="decoration-line"></div>
+    <ul class="catalog-pagination">
+      <li class="catalog-pagination-item">
+        <a href="#" class="catalog-pagination-link">1</a>
+      </li>
+      <li class="catalog-pagination-item">
+        <a href="#" class="catalog-pagination-link">2</a>
+      </li>
+      <li class="catalog-pagination-item">
+        <a href="#" class="catalog-pagination-link">3</a>
+      </li>
+      <li class="catalog-pagination-item">
+        <a href="#" class="catalog-pagination-link">4</a>
+      </li>
+      <li class="catalog-pagination-item">
+        <a href="#" class="catalog-pagination-link">...
+          <span class="visually-hidden">Следующие страницы</span>
+        </a>
+      </li>
+      <li class="catalog-pagination-item">
+        <a href="#" class="catalog-pagination-link">10</a>
+      </li>
+    </ul>
   </main>
 
   </body>
