добавит разметку участка показа кол-ва гостиниц на странице и разметку формы для рассылки

--- a/catalog.html
+++ b/catalog.html
@@ -211,6 +211,19 @@
         <a href="#" class="catalog-pagination-link">10</a>
       </li>
     </ul>
+    <span class="catalog-hotels-amount">Гостиниц на странице:</span>
+    <select class="current-hotels-amount" aria-label="Количество гостиниц на странице">
+      <option>4</option>
+    </select>
+    <section class="catalog-subscribe-aria">
+      <h2 class="subscribe-aria-title">Подпишитесь на рассылку</h2>
+      <p class="subscribe-aria-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+        <label for="email">e-mail</label>
+        <input type="email" id="email" name="email" placeholder="Ваш e-mail">
+        <button type="submit" class="button- button-subscribe">Подписаться</button>
+      </form>
+    </section>
   </main>
 
   </body>
