добавит разметку футера

--- a/catalog.html
+++ b/catalog.html
@@ -225,6 +225,31 @@
       </form>
     </section>
   </main>
-
+  <footer class="page-footer">
+    <section class="footer-contacts">
+      <h2 class="visually-hidden">Социальные сети</h2>
+      <ul class="footer-contacts-list">
+        <li class="footer-contacts-item">
+          <a href="https://vk.com/htmlacademy" class="footer-contacts-link">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="footer-contacts-item">
+          <a href="https://t.me/htmlacademy" class="footer-contacts-link">
+            <span class="visually-hidden">Телеграм</span>
+          </a>
+        </li>
+        <li class="footer-contacts-item">
+          <a href="https://www.youtube.com/user/htmlacademyru" class="footer-contacts-link">
+            <span class="visually-hidden">YouTube</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <a href="tel:+78128121212" class="footer-phone-number">+7 (812) 812-12-12</a>
+    <a href="https://htmlacademy.ru/" class="footer-html-academy-link">
+      <img src="#" class="footer-html-academy-image" alt="HTML Academy">
+    </a>
+  </footer>
   </body>
 </html>
