--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <header class="page-header">
-    <img class="header-logo" src="#" alt="Логотип город Седона"/>
+    <img class="header-logo" src="#" alt="Логотип город Седона">
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -39,7 +39,7 @@
   <main class="main-index">
     <section class="welcome-section">
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-      <img class="welcome-section-logo" src="#" alt="Прекрасная Седона &quot;ибо Гранд Каньен отстой&quot;"/>
+      <img class="welcome-section-logo" src="#" alt="Прекрасная Седона &quot;ибо Гранд Каньен отстой&quot;">
     </section>
     <section class="description-section">
       <strong class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
@@ -51,7 +51,7 @@
         <li class="advantages-item">
           <h3 class="advantages-title">Настоящий городок</h3>
           <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img class="advantages-image" src="#" alt="Мотель в Седоне"/>
+          <img class="advantages-image" src="#" alt="Мотель в Седоне">
           <ul class="special-advantages">
             <li class="advantages-list advantages-list-special">
               <h3 class="advantages-title">Жилье</h3>
@@ -70,7 +70,7 @@
         <li class="advantages-item">
           <h3 class="advantages-title">Там есть мост дьявола</h3>
           <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          <img class="advantages-image" src="#" alt="Мост Дьявола"/>
+          <img class="advantages-image" src="#" alt="Мост Дьявола">
         </li>
         <li class="advantages-item">
           <h3 class="advantages-title">Небольшая площадь</h3>
@@ -98,7 +98,7 @@
       <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="email">e-mail</label>
         <input type="email" id="email" name="email" placeholder="Ваш e-mail">
-        <button type="submit" class="button- button-subscribe">Подписаться</button>
+        <button type="submit" class="button button-subscribe">Подписаться</button>
       </form>
     </section>
   </main>
@@ -125,7 +125,7 @@
     </section>
     <a href="tel:+78128121212" class="footer-phone-number">+7 (812) 812-12-12</a>
     <a href="https://htmlacademy.ru/" class="footer-html-academy-link">
-      <img src="#" class="footer-html-academy-image" alt="HTML Academy">
+      <img  class="footer-html-academy-image" src="#" alt="HTML Academy">
     </a>
   </footer>
   </body>
