--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <header class="page-header">
-    <img class="header-logo" src="#" alt="Логотип город Седона"/>
+    <img class="header-logo" src="#" alt="Логотип город Седона">
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -123,7 +123,7 @@
       <ul class="catalog-hotels-list">
         <li class="catalog-hotels-card">
           <a href="#" class="hotel-link">
-            <img src="#" class="hotel-image" alt="Гостиница Amara Resort & Spa">
+            <img class="hotel-image" src="#" alt="Гостиница Amara Resort & Spa">
             <h3 class="hotel-title">Amara Resort & Spa</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
@@ -131,16 +131,16 @@
           <a href="#" class="hotel-link hotel-link-details">подробнее</a>
           <a href="#" class="hotel-link hotel-link-favorite">в избранное</a>
           <div class="hotel-stars-rate">
-            <span class="rate-star">звезда</span>
-            <span class="rate-star">звезда</span>
-            <span class="rate-star">звезда</span>
-            <span class="rate-star">звезда</span>
+            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="#" alt="звезда">
           </div>
           <span class="hotel-rating">Рейтинг: 8,5</span>
         </li>
         <li class="catalog-hotels-card">
           <a href="#" class="hotel-link">
-            <img src="#" class="hotel-image" alt="Гостиница Desert Quail Inn">
+            <img class="hotel-image" src="#" alt="Гостиница Desert Quail Inn">
             <h3 class="hotel-title">Villas at Poco Diablo</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
@@ -148,16 +148,16 @@
           <a href="#" class="hotel-link hotel-link-details">подробнее</a>
           <a href="#" class="hotel-link hotel-link-favorite">в избранное</a>
           <div class="hotel-stars-rate">
-            <span class="rate-star">звезда</span>
-            <span class="rate-star">звезда</span>
-            <span class="rate-star">звезда</span>
-            <span class="rate-star">звезда</span>
+            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="#" alt="звезда">
           </div>
           <span class="hotel-rating">Рейтинг: 9,2</span>
         </li>
         <li class="catalog-hotels-card">
           <a href="#" class="hotel-link">
-            <img src="#" class="hotel-image" alt="Гостиница Desert Quail Inn">
+            <img class="hotel-image" src="#" alt="Гостиница Desert Quail Inn">
             <h3 class="hotel-title">Desert Quail Inn</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
@@ -165,15 +165,15 @@
           <a href="#" class="hotel-link-details">подробнее</a>
           <a href="#" class="hotel-link-favorite">в избранное</a>
           <div class="hotel-stars-rate">
-            <span class="rate-star">звезда</span>
-            <span class="rate-star">звезда</span>
-            <span class="rate-star">звезда</span>
+            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="#" alt="звезда">
           </div>
           <span class="hotel-rating">Рейтинг: 6,9</span>
         </li>
         <li class="catalog-hotels-card">
           <a href="#" class="hotel-link">
-            <img src="#" class="hotel-image" alt="Гостиница GreenTree Inn">
+            <img  class="hotel-image" src="#" alt="Гостиница GreenTree Inn">
             <h3 class="hotel-title">GreenTree Inn</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
@@ -181,8 +181,8 @@
           <a href="#" class="hotel-link-details">подробнее</a>
           <a href="#" class="hotel-link-favorite">в избранное</a>
           <div class="hotel-stars-rate">
-            <span class="rate-star">звезда</span>
-            <span class="rate-star">звезда</span>
+            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="#" alt="звезда">
           </div>
           <span class="hotel-rating">Рейтинг: 5,0</span>
         </li>
@@ -213,7 +213,9 @@
     </ul>
     <span class="catalog-hotels-amount">Гостиниц на странице:</span>
     <select class="current-hotels-amount" aria-label="Количество гостиниц на странице">
-      <option>4</option>
+      <option value="4">4</option>
+      <option value="8">8</option>
+      <option value="16">16</option>
     </select>
     <section class="catalog-subscribe-aria">
       <h2 class="subscribe-aria-title">Подпишитесь на рассылку</h2>
@@ -248,7 +250,7 @@
     </section>
     <a href="tel:+78128121212" class="footer-phone-number">+7 (812) 812-12-12</a>
     <a href="https://htmlacademy.ru/" class="footer-html-academy-link">
-      <img src="#" class="footer-html-academy-image" alt="HTML Academy">
+      <img class="footer-html-academy-image" src="#" alt="HTML Academy">
     </a>
   </footer>
   </body>
