поправит label в фильтрах типа жилья, поправит футер, исправит язык в lang

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <title>HTML Academy: Седона</title>
@@ -78,11 +78,11 @@
               </li>
               <li class="catalog-filter-item">
                 <input class="control-input" type="radio" name="type" id="motel" value="motel">
-                <label for="hotel">Мотель</label>
+                <label for="motel">Мотель</label>
               </li>
               <li class="catalog-filter-item">
                 <input class="control-input" type="radio" name="type" id="apartment" value="apartment">
-                <label for="hotel">Апартаменты</label>
+                <label for="apartment">Апартаменты</label>
               </li>
             </ul>
           </fieldset>
@@ -248,7 +248,9 @@
         </li>
       </ul>
     </section>
-    <a href="tel:+78128121212" class="footer-phone-number">+7 (812) 812-12-12</a>
+    <a href="tel:+78128121212" class="footer-phone-number">
+      <span class="visually-hidden">Номер телефона</span>+7 (812) 812-12-12
+    </a>
     <a href="https://htmlacademy.ru/" class="footer-html-academy-link">
       <img class="footer-html-academy-image" src="#" alt="HTML Academy">
     </a>
