--- a/index.html
+++ b/index.html
@@ -123,9 +123,11 @@
         </li>
       </ul>
     </section>
-    <a href="tel:+78128121212" class="footer-phone-number">+7 (812) 812-12-12</a>
+    <a href="tel:+78128121212" class="footer-phone-number">
+      <span class="visually-hidden">Номер телефона</span>+7 (812) 812-12-12
+    </a>
     <a href="https://htmlacademy.ru/" class="footer-html-academy-link">
-      <img  class="footer-html-academy-image" src="#" alt="HTML Academy">
+      <img class="footer-html-academy-image" src="#" alt="HTML Academy">
     </a>
   </footer>
   </body>
