исправит положения атрибута класса в ссыылках

--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a href="#" class="navigation-link navigation-link-current">Главная</a>
+          <a class="navigation-link navigation-link-current" href="#">Главная</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">О Седоне</a>
+          <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item">
-          <a href="catalog.html" class="navigation-link">Гостиницы</a>
+          <a class="navigation-link" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a href="#" class="navigation-link">
+          <a class="navigation-link" href="#">
             <span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">
+          <a class="navigation-link" href="#">
             <span class="visually-hidden">Избранное</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">Хочу сюда!</a>
+          <a class="navigation-link" href="#">Хочу сюда!</a>
         </li>
       </ul>
     </nav>
@@ -90,7 +90,7 @@
       <h2 class="offer-title">Заинтересовались?</h2>
       <p class="offer-description">Укажите предполагаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a href="catalog.html" class="offer-link">Поиск гостиницы в Седоне</a>
+      <a class="offer-link" href="catalog.html" >Поиск гостиницы в Седоне</a>
     </section>
     <section class="subscribe">
       <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
@@ -107,26 +107,26 @@
       <h2 class="visually-hidden">Социальные сети</h2>
       <ul class="footer-contacts-list">
         <li class="footer-contacts-item">
-          <a href="https://vk.com/htmlacademy" class="footer-contacts-link">
+          <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
         <li class="footer-contacts-item">
-          <a href="https://t.me/htmlacademy" class="footer-contacts-link">
+          <a class="footer-contacts-link" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
         <li class="footer-contacts-item">
-          <a href="https://www.youtube.com/user/htmlacademyru" class="footer-contacts-link">
+          <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">YouTube</span>
           </a>
         </li>
       </ul>
     </section>
-    <a href="tel:+78128121212" class="footer-phone-number">
+    <a class="footer-phone-number" href="tel:+78128121212">
       <span class="visually-hidden">Номер телефона</span>+7 (812) 812-12-12
     </a>
-    <a href="https://htmlacademy.ru/" class="footer-html-academy-link">
+    <a class="footer-html-academy-link" href="https://htmlacademy.ru/">
       <img class="footer-html-academy-image" src="#" alt="HTML Academy">
     </a>
   </footer>
