--- a/catalog.html
+++ b/catalog.html
@@ -10,28 +10,28 @@
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a href="#" class="navigation-link">Главная</a>
+          <a class="navigation-link" href="#" >Главная</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">О Седоне</a>
+          <a class="navigation-link" href="#" >О Седоне</a>
         </li>
         <li class="navigation-item">
-          <a href="catalog.html" class="navigation-link navigation-link-current">Гостиницы</a>
+          <a class="navigation-link navigation-link-current" href="catalog.html" >Гостиницы</a>
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a href="#" class="navigation-link">
+          <a class="navigation-link" href="#">
             <span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">
+          <a class="navigation-link" href="#">
             <span class="visually-hidden">Избранное</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">Хочу сюда!</a>
+          <a class="navigation-link" href="#" >Хочу сюда!</a>
         </li>
       </ul>
     </nav>
@@ -41,12 +41,12 @@
       <h1 class="catalog-title">Гостиницы Седоны</h1>
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
-          <a href="index.html" class="breadcrumbs-link">
+          <a class="breadcrumbs-link" href="index.html" >
             <span class="visually-hidden">Главная</span>
           </a>
         </li>
         <li class="breadcrumbs-item">
-          <a href="#" class="breadcrumbs-link">Гостиницы</a>
+          <a class="breadcrumbs-link" href="#" >Гостиницы</a>
         </li>
       </ul>
       <section class="catalog-filters">
@@ -108,13 +108,13 @@
         <option value="high-cost">Сначала дорогие</option>
         <option value="popular">Сначала популярные</option>
       </select>
-      <a href="#" class="view-table view-current">
+      <a class="view-table view-current" href="#" >
         <span class="visually-hidden">Показать карточки</span>
       </a>
-      <a href="#" class="view-slides">
+      <a class="view-slides" href="#">
         <span class="visually-hidden">Показать слайды</span>
       </a>
-      <a href="#" class="view-list">
+      <a class="view-list" href="#">
         <span class="visually-hidden">Показать список</span>
       </a>
     </section>
@@ -122,14 +122,14 @@
       <h2 class="visually-hidden">Каталог Гостиниц</h2>
       <ul class="catalog-hotels-list">
         <li class="catalog-hotels-card">
-          <a href="#" class="hotel-link">
+          <a class="hotel-link" href="#">
             <img class="hotel-image" src="#" alt="Гостиница Amara Resort & Spa">
             <h3 class="hotel-title">Amara Resort & Spa</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
           <span class="hotel-price">От 4000 ₽</span>
-          <a href="#" class="hotel-link hotel-link-details">подробнее</a>
-          <a href="#" class="hotel-link hotel-link-favorite">в избранное</a>
+          <a class="hotel-link hotel-link-details" href="#" >подробнее</a>
+          <a class="hotel-link hotel-link-favorite" href="#">в избранное</a>
           <div class="hotel-stars-rate">
             <img class="rate-star" src="#" alt="звезда">
             <img class="rate-star" src="#" alt="звезда">
@@ -139,14 +139,14 @@
           <span class="hotel-rating">Рейтинг: 8,5</span>
         </li>
         <li class="catalog-hotels-card">
-          <a href="#" class="hotel-link">
+          <a class="hotel-link" href="#">
             <img class="hotel-image" src="#" alt="Гостиница Desert Quail Inn">
             <h3 class="hotel-title">Villas at Poco Diablo</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
           <span class="hotel-price">От 5000 ₽</span>
-          <a href="#" class="hotel-link hotel-link-details">подробнее</a>
-          <a href="#" class="hotel-link hotel-link-favorite">в избранное</a>
+          <a class="hotel-link hotel-link-details" href="#">подробнее</a>
+          <a class="hotel-link hotel-link-favorite" href="#" >в избранное</a>
           <div class="hotel-stars-rate">
             <img class="rate-star" src="#" alt="звезда">
             <img class="rate-star" src="#" alt="звезда">
@@ -156,14 +156,14 @@
           <span class="hotel-rating">Рейтинг: 9,2</span>
         </li>
         <li class="catalog-hotels-card">
-          <a href="#" class="hotel-link">
+          <a class="hotel-link" href="#" >
             <img class="hotel-image" src="#" alt="Гостиница Desert Quail Inn">
             <h3 class="hotel-title">Desert Quail Inn</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
           <span class="hotel-price">От 2500 ₽</span>
-          <a href="#" class="hotel-link-details">подробнее</a>
-          <a href="#" class="hotel-link-favorite">в избранное</a>
+          <a class="hotel-link-details" href="#">подробнее</a>
+          <a class="hotel-link-favorite" href="#">в избранное</a>
           <div class="hotel-stars-rate">
             <img class="rate-star" src="#" alt="звезда">
             <img class="rate-star" src="#" alt="звезда">
@@ -172,14 +172,14 @@
           <span class="hotel-rating">Рейтинг: 6,9</span>
         </li>
         <li class="catalog-hotels-card">
-          <a href="#" class="hotel-link">
+          <a class="hotel-link" href="#">
             <img  class="hotel-image" src="#" alt="Гостиница GreenTree Inn">
             <h3 class="hotel-title">GreenTree Inn</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
           <span class="hotel-price">От 1500 ₽</span>
-          <a href="#" class="hotel-link-details">подробнее</a>
-          <a href="#" class="hotel-link-favorite">в избранное</a>
+          <a class="hotel-link-details" href="#">подробнее</a>
+          <a class="hotel-link-favorite" href="#">в избранное</a>
           <div class="hotel-stars-rate">
             <img class="rate-star" src="#" alt="звезда">
             <img class="rate-star" src="#" alt="звезда">
@@ -191,24 +191,24 @@
     <div class="decoration-line"></div>
     <ul class="catalog-pagination">
       <li class="catalog-pagination-item">
-        <a href="#" class="catalog-pagination-link">1</a>
+        <a class="catalog-pagination-link" href="#">1</a>
       </li>
       <li class="catalog-pagination-item">
-        <a href="#" class="catalog-pagination-link">2</a>
+        <a class="catalog-pagination-link" href="#">2</a>
       </li>
       <li class="catalog-pagination-item">
-        <a href="#" class="catalog-pagination-link">3</a>
+        <a class="catalog-pagination-link" href="#">3</a>
       </li>
       <li class="catalog-pagination-item">
-        <a href="#" class="catalog-pagination-link">4</a>
+        <a class="catalog-pagination-link" href="#">4</a>
       </li>
       <li class="catalog-pagination-item">
-        <a href="#" class="catalog-pagination-link">...
+        <a class="catalog-pagination-link" href="#">...
           <span class="visually-hidden">Следующие страницы</span>
         </a>
       </li>
       <li class="catalog-pagination-item">
-        <a href="#" class="catalog-pagination-link">10</a>
+        <a class="catalog-pagination-link" href="#">10</a>
       </li>
     </ul>
     <span class="catalog-hotels-amount">Гостиниц на странице:</span>
@@ -232,26 +232,26 @@
       <h2 class="visually-hidden">Социальные сети</h2>
       <ul class="footer-contacts-list">
         <li class="footer-contacts-item">
-          <a href="https://vk.com/htmlacademy" class="footer-contacts-link">
+          <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
         <li class="footer-contacts-item">
-          <a href="https://t.me/htmlacademy" class="footer-contacts-link">
+          <a class="footer-contacts-link" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
         <li class="footer-contacts-item">
-          <a href="https://www.youtube.com/user/htmlacademyru" class="footer-contacts-link">
+          <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">YouTube</span>
           </a>
         </li>
       </ul>
     </section>
-    <a href="tel:+78128121212" class="footer-phone-number">
+    <a class="footer-phone-number" href="tel:+78128121212">
       <span class="visually-hidden">Номер телефона</span>+7 (812) 812-12-12
     </a>
-    <a href="https://htmlacademy.ru/" class="footer-html-academy-link">
+    <a class="footer-html-academy-link" href="https://htmlacademy.ru/">
       <img class="footer-html-academy-image" src="#" alt="HTML Academy">
     </a>
   </footer>
