перенесет текст приветсвтия в секцию приветствия

--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
     <section class="welcome-section">
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
       <img class="welcome-section-logo" src="#" alt="Прекрасная Седона &quot;ибо Гранд Каньен отстой&quot;">
-    </section>
-    <section class="description-section">
-      <strong class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
-      <p class="description-section-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+      <strong class="welcome-section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
+      <p class="welcome-section-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
     <section class="advantages">
       <h2 class="visually-hidden">Приемущества Седоны</h2>
