добавит якорную ссылку для "О Седоне"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <a class="navigation-link navigation-link-current" href="#">Главная</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">О Седоне</a>
+          <a class="navigation-link" href="#advantages">О Седоне</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="catalog.html">Гостиницы</a>
@@ -43,7 +43,7 @@
       <strong class="welcome-section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
       <p class="welcome-section-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
-    <section class="advantages">
+    <section class="advantages" id="advantages">
       <h2 class="visually-hidden">Приемущества Седоны</h2>
       <ol class="advantages-list">
         <li class="advantages-item">
