--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <header class="page-header">
-    <img class="header-logo" src="#" alt="Логотип город Седона">
+    <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип город Седона.">
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -39,7 +39,7 @@
   <main class="main-index">
     <section class="welcome-section">
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-      <img class="welcome-section-logo" src="#" alt="Прекрасная Седона &quot;ибо Гранд Каньен отстой&quot;">
+      <img class="welcome-section-logo" src="images/welcome.svg" width="458" height="352" alt="Прекрасная Седона &quot;ибо Гранд Каньен отстой&quot;.">
       <strong class="welcome-section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
       <p class="welcome-section-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
@@ -49,26 +49,29 @@
         <li class="advantages-item">
           <h3 class="advantages-title">Настоящий городок</h3>
           <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img class="advantages-image" src="#" alt="Мотель в Седоне">
-          <ul class="special-advantages">
-            <li class="advantages-list advantages-list-special">
-              <h3 class="advantages-title">Жилье</h3>
-              <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          <img class="advantages-image" src="images/advantage-image-1.jpg" width="800" height="384" alt="Мотель в Седоне.">
+          <ul class="advantages-list advantages-special-list">
+            <li class="advantages-special-item">
+              <img class="advantages-special-image" src="images/icons/advantage-home-icon.svg" width="75" height="72" alt="Дом.">
+              <h3 class="advantages-special-title">Жилье</h3>
+              <p class="advantages-special-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
-            <li class="advantages-item">
-              <h3 class="advantages-title">Еда</h3>
-              <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <li class="advantages-special-item">
+              <img class="advantages-special-image" src="images/icons/advantage-burger-icon.svg" width="74" height="70" alt="Бургер.">
+              <h3 class="advantages-special-title">Еда</h3>
+              <p class="advantages-special-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="advantages-item">
-              <h3 class="advantages-title">Сувениры</h3>
-              <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+            <li class="advantages-special-item">
+              <img class="advantages-special-image" src="images/icons/advantage-present-icon.svg" width="64" height="76" alt="Подарок.">
+              <h3 class="advantages-special-title">Сувениры</h3>
+              <p class="advantages-special-description">Не только китайского, но и настоящего местного производства!</p>
             </li>
           </ul>
         </li>
         <li class="advantages-item">
           <h3 class="advantages-title">Там есть мост дьявола</h3>
           <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          <img class="advantages-image" src="#" alt="Мост Дьявола">
+          <img class="advantages-image" src="images/advantage-image-2.jpg" alt="Мост Дьявола.">
         </li>
         <li class="advantages-item">
           <h3 class="advantages-title">Небольшая площадь</h3>
@@ -106,16 +109,19 @@
       <ul class="footer-contacts-list">
         <li class="footer-contacts-item">
           <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
+            <img class="footer-contact-icon" src="images/icons/vk-icon.svg" width="24" height="15" alt="">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
         <li class="footer-contacts-item">
           <a class="footer-contacts-link" href="https://t.me/htmlacademy">
+            <img class="footer-contact-icon" src="images/icons/telegram-icon.svg" width="18" height="17" alt="">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
         <li class="footer-contacts-item">
           <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
+            <img class="footer-contact-icon" src="images/icons/youtube-icon.svg" width="22" height="17" alt="">
             <span class="visually-hidden">YouTube</span>
           </a>
         </li>
@@ -125,7 +131,7 @@
       <span class="visually-hidden">Номер телефона</span>+7 (812) 812-12-12
     </a>
     <a class="footer-html-academy-link" href="https://htmlacademy.ru/">
-      <img class="footer-html-academy-image" src="#" alt="HTML Academy">
+      <img class="footer-html-academy-image" src="images/html-academy-logo.svg" alt="HTML Academy">
     </a>
   </footer>
   </body>
