--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <img class="navigation-image" src="images/icons/search-icon.svg" width="18" height="18" alt="Лупа.">
             <span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <img class="navigation-image" src="images/icons/favorite-icon.svg" width="19" height="17" alt="Сердечко.">
             <span class="visually-hidden">Избранное</span>
           </a>
         </li>
