исправит alt у карточек с гостиницами

--- a/catalog.html
+++ b/catalog.html
@@ -147,7 +147,7 @@
         </li>
         <li class="catalog-hotels-card">
           <a class="hotel-link" href="#">
-            <img class="hotel-image" src="images/catalog/hotel-2.jpg" width="300" height="211" alt="Гостиница Desert Quail Inn">
+            <img class="hotel-image" src="images/catalog/hotel-2.jpg" width="300" height="211" alt="Гостиница Villas at Poco Diablo">
             <h3 class="hotel-title">Villas at Poco Diablo</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
