исправит недочеты c alt, исправит тэг <strong> на <h2>, уберет лишние img

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <header class="page-header">
-    <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип город Седона.">
+    <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип города Седона.">
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -39,9 +39,9 @@
   <main class="main-index">
     <section class="welcome-section">
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-      <img class="welcome-section-logo" src="images/welcome.svg" width="458" height="352" alt="Прекрасная Седона &quot;ибо Гранд Каньен отстой&quot;.">
-      <strong class="welcome-section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
-      <p class="welcome-section-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+      <img class="welcome-section-logo" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в прекрасную Седону &quot;ибо Гранд Каньен отстой&quot;.">
+      <h2 class="welcome-section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="welcome-section-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
     <section class="advantages" id="advantages">
       <h2 class="visually-hidden">Приемущества Седоны</h2>
@@ -52,17 +52,14 @@
           <img class="advantages-image" src="images/advantage-image-1.jpg" width="800" height="384" alt="Мотель в Седоне.">
           <ul class="advantages-list advantages-special-list">
             <li class="advantages-special-item">
-              <img class="advantages-special-image" src="images/icons/advantage-home-icon.svg" width="75" height="72" alt="Дом.">
               <h3 class="advantages-special-title">Жилье</h3>
               <p class="advantages-special-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="advantages-special-item">
-              <img class="advantages-special-image" src="images/icons/advantage-burger-icon.svg" width="74" height="70" alt="Бургер.">
               <h3 class="advantages-special-title">Еда</h3>
               <p class="advantages-special-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="advantages-special-item">
-              <img class="advantages-special-image" src="images/icons/advantage-present-icon.svg" width="64" height="76" alt="Подарок.">
               <h3 class="advantages-special-title">Сувениры</h3>
               <p class="advantages-special-description">Не только китайского, но и настоящего местного производства!</p>
             </li>
