--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <header class="page-header">
-    <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип город Седона.">
+    <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип города Седона.">
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
