исправит alt у рейтинга гостиниц

--- a/catalog.html
+++ b/catalog.html
@@ -142,10 +142,10 @@
             <a class="button button-details" href="#">подробнее</a>
             <button class="button button-add-favorite" type="button">в избранное</button>
             <div class="hotel-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды.">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
             </div>
             <b class="hotel-rating">Рейтинг: 8,5</b>
           </li>
@@ -160,10 +160,10 @@
             <a class="button button-details" href="#">подробнее</a>
             <button class="button button-in-favorite" type="button">в избранном</button>
             <div class="hotel-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды.">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
             </div>
             <b class="hotel-rating">Рейтинг: 9,2</b>
           </li>
@@ -178,9 +178,9 @@
             <a class="button button-details" href="#">подробнее</a>
             <button class="button button-add-favorite" type="button">в избранное</button>
             <div class="hotel-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 3 звезды.">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
             </div>
             <b class="hotel-rating">Рейтинг: 6,9</b>
           </li>
@@ -195,8 +195,8 @@
             <a class="button button-details" href="#">подробнее</a>
             <button class="button button-add-favorite" type="button">в избранное</button>
             <div class="hotel-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 2 звезды.">
+              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
             </div>
             <b class="hotel-rating">Рейтинг: 5,0</b>
           </li>
