--- a/catalog.html
+++ b/catalog.html
@@ -98,7 +98,7 @@
                      value="9000">
               <label for="range-price" class="visually-hidden">Слайдер выбора цены</label>
             </fieldset>
-            <div class="form-buttons">
+            <div class="form-buttons-container">
               <button type="submit" class="button button-apply-filters">Применить</button>
               <button type="reset" class="button button-reset-filters">Сбросить</button>
             </div>
@@ -113,7 +113,7 @@
           <option value="high-cost">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
         </select>
-        <div class="catalog-sort-view-buttons">
+        <div class="catalog-sort-view-controls">
           <a class="view-button view-current" href="#">
             <img class="view-icon" src="images/icons/view-table-icon.svg" width="16" height="14" alt="">
             <span class="visually-hidden" hidden>Показать карточки</span>
@@ -203,7 +203,7 @@
         </ul>
       </section>
       <div class="decoration-line"></div>
-      <div class="catalog-page-controls-container">
+      <div class="catalog-pages-controls">
         <ul class="catalog-pagination">
           <li class="catalog-pagination-item">
             <a class="catalog-pagination-link" href="#">1</a>
@@ -226,7 +226,7 @@
             <a class="catalog-pagination-link" href="#">10</a>
           </li>
         </ul>
-        <div class="amount-controls-container">
+        <div class="catalog-amount-controls">
           <span class="catalog-hotels-amount">Гостиниц на странице:</span>
           <select class="current-hotels-amount" aria-label="Количество гостиниц на странице">
             <option value="4">4</option>
