внесет правки в стили index (глобальные селекторы, отступы)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p class="advantages-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
           <li class="advantages-important-item">
-            <div class="advantages-important-item-wrapper">
+            <div class=" advantages-item advantages-important-item-wrapper">
               <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
@@ -70,7 +70,7 @@
             </ul>
           </li>
           <li class="advantages-important-item ">
-            <div class="advantages-important-item-wrapper">
+            <div class="advantages-item advantages-important-item-wrapper">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
