--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
   <div class="wrapper">
     <header class="page-header">
-      <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип города Седона.">
+      <a href="#" class="header-link-logo">
+        <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип города Седона.">
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
