исправит ссылки у svg

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="navigation-link search-link" href="#">
             <svg width="19" height="19" aria-labelledby="search" role="img">
               <title id="search">Поиск</title>
-              <use href="/images/icons/header.svg#search"></use>
+              <use href="images/icons/header.svg#search"></use>
             </svg>
           </a>
         </li>
@@ -36,7 +36,7 @@
           <a class="navigation-link favorite-link" href="#">
             <svg width="19" height="19" aria-labelledby="favorite" role="img">
               <title id="favorite">Избранное</title>
-              <use href="/images/icons/header.svg#favorite"></use>
+              <use href="images/icons/header.svg#favorite"></use>
             </svg>
             <div class="favorite-count">12</div>
           </a>
@@ -125,7 +125,7 @@
           <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
             <svg width="24" height="15" aria-labelledby="vk-title" role="img">
               <title id="vk-title">Вконтакте</title>
-              <use href="/images/icons/footer-social.svg#vk"></use>
+              <use href="images/icons/footer-social.svg#vk"></use>
             </svg>
           </a>
         </li>
@@ -133,7 +133,7 @@
           <a class="footer-contacts-link" href="https://t.me/htmlacademy">
             <svg width="18" height="17" aria-labelledby="telegram-title" role="img">
               <title id="telegram-title">Телеграм</title>
-              <use href="/images/icons/footer-social.svg#telegram"></use>
+              <use href="images/icons/footer-social.svg#telegram"></use>
             </svg>
           </a>
         </li>
@@ -141,7 +141,7 @@
           <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
             <svg width="22" height="17" aria-labelledby="youtube-title" role="img">
               <title id="youtube-title">Ютуб канал</title>
-              <use href="/images/icons/footer-social.svg#youtube"></use>
+              <use href="images/icons/footer-social.svg#youtube"></use>
             </svg>
           </a>
         </li>
