--- a/catalog.html
+++ b/catalog.html
@@ -123,7 +123,7 @@
               <a class="button-view table-view-button view-current" href="#">
                 <svg width="16" height="14" aria-labelledby="view-table" role="img">
                   <title id="view-table">Показать карточки</title>
-                  <use href="/images/icons/catalog-view.svg#table"></use>
+                  <use href="images/icons/catalog-view.svg#table"></use>
                 </svg>
               </a>
             </li>
@@ -131,7 +131,7 @@
               <a class="button-view slider-view-button" href="#">
                 <svg width="16" height="14" aria-labelledby="view-slider" role="img">
                   <title id="view-slider">Показать слайдер</title>
-                  <use href="/images/icons/catalog-view.svg#slider"></use>
+                  <use href="images/icons/catalog-view.svg#slider"></use>
                 </svg>
               </a>
             </li>
@@ -139,7 +139,7 @@
               <a class="button-view list-view-button" href="#">
                 <svg width="16" height="14" aria-labelledby="view-list" role="img">
                   <title id="view-list">Показать лист</title>
-                  <use href="/images/icons/catalog-view.svg#list"></use>
+                  <use href="images/icons/catalog-view.svg#list"></use>
                 </svg>
                 <span class="visually-hidden">Показать список</span>
               </a>
@@ -163,16 +163,16 @@
             <button class="button button-action" type="button">в избранное</button>
             <div class="hotel-card-star-rating" aria-label="Рейтинг гостиницы 4 звезды.">
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
             </div>
             <b class="hotel-card-rating">Рейтинг: 8,5</b>
@@ -191,16 +191,16 @@
             <button class="button button-selected" type="button">в избранном</button>
             <div class="hotel-card-star-rating" aria-label="Рейтинг гостиницы 4 звезды.">
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
             </div>
             <b class="hotel-card-rating">Рейтинг: 9,2</b>
@@ -219,13 +219,13 @@
             <button class="button button-action" type="button">в избранное</button>
             <div class="hotel-card-star-rating" aria-label="Рейтинг гостиницы 3 звезды.">
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
             </div>
             <b class="hotel-card-rating">Рейтинг: 6,9</b>
@@ -244,10 +244,10 @@
             <button class="button button-action" type="button">в избранное</button>
             <div class="hotel-card-star-rating" aria-label="Рейтинг гостиницы 2 звезды.">
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
               <svg class="rating-star" width="18" height="17" aria-hidden="true" focusable="false" role="img">
-                <use href="/images/icons/rating.svg#star"></use>
+                <use href="images/icons/rating.svg#star"></use>
               </svg>
             </div>
             <b class="hotel-card-rating">Рейтинг: 5,0</b>
@@ -305,7 +305,7 @@
             <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
               <svg width="24" height="15" aria-labelledby="vk-title" role="img">
                 <title id="vk-title">Вконтакте</title>
-                <use href="/images/icons/footer-social.svg#vk"></use>
+                <use href="images/icons/footer-social.svg#vk"></use>
               </svg>
             </a>
           </li>
@@ -313,7 +313,7 @@
             <a class="footer-contacts-link" href="https://t.me/htmlacademy">
               <svg width="18" height="17" aria-labelledby="telegram-title" role="img">
                 <title id="telegram-title">Телеграм</title>
-                <use href="/images/icons/footer-social.svg#telegram"></use>
+                <use href="images/icons/footer-social.svg#telegram"></use>
               </svg>
             </a>
           </li>
@@ -321,7 +321,7 @@
             <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
               <svg width="22" height="17" aria-labelledby="youtube-title" role="img">
                 <title id="youtube-title">Ютуб канал</title>
-                <use href="/images/icons/footer-social.svg#youtube"></use>
+                <use href="images/icons/footer-social.svg#youtube"></use>
               </svg>
             </a>
           </li>
